# handson-fastapi

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: gh-pages.yml  test.yml
scripts/: hello.py  test_hello.py
